git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@245 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Overview/Overview.Rnw
+++ b/Overview/Overview.Rnw
@@ -127,7 +127,7 @@ only takes 3-4 minutes to process the 11 GB of data on a laptop with only
 \begin{Sinput}
 > library(bigmemory)
 > library(biganalytics)
-> x <- read.big.matrix("airline.csv", type="integer", header="TRUE", 
+> x <- read.big.matrix("airline.csv", type="integer", header=TRUE, 
 +                      backingfile="airline.bin",
 +                      descriptorfile="airline.desc",
 +                      extraCols="Age")
