git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@292 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/Overview/Overview.Rnw
+++ b/Overview/Overview.Rnw
@@ -1,3 +1,6 @@
+% \VignetteIndexEntry{The Bigmemory Project Overview}
+% \VignetteDepends{bigmemory}
+% \VignettePackage{bigmemory}
 \documentclass[12pt]{article}
 
 \usepackage{graphics}
