git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@311 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NEWS
+++ b/pkg/bigmemory/NEWS
@@ -9,6 +9,10 @@
 # Mike Kane <michael.kane@yale.edu>
 #
 
+2010-05-16	Jay	<bigmemoryauthors@bigmemory.org>
+
+* Set proper default value op='AND' for mwhich()
+
 2010-05-08	Jay	<bigmemoryauthors@bigmemory.org>
 
 * The configuration process has been streamlined to avoid
