--- a/pkg/bigalgebra/inst/doc/bigalgebra.Rnw
+++ b/pkg/bigalgebra/inst/doc/bigalgebra.Rnw
@@ -1,6 +1,6 @@
-% \VignetteIndexEntry{rredis Manual}
-% \VignetteDepends{rredis}
-% \VignettePackage{rredis}
+% \VignetteIndexEntry{bigalgebra Manual}
+% \VignetteDepends{bigalgebra}
+% \VignettePackage{bigalgebra}
 \documentclass[12pt]{article}
 \usepackage{amsmath}
 \usepackage[pdftex]{graphicx}
