git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@325 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/synchronicity/README
+++ b/pkg/synchronicity/README
@@ -4,3 +4,6 @@
 # We'll expand support to Windows as soon as these have been
 # resolved.
 #
+# If you want to use this package with 32-bit Windows, it may be
+# possible (comment out the OS_type line in DESCRIPTION).
+#
