--- a/pkg/bigalgebra/inst/doc/bigalgebra.Rnw
+++ b/pkg/bigalgebra/inst/doc/bigalgebra.Rnw
@@ -113,7 +113,7 @@ The following example illustrates installation with the
 reference large-index BLAS and LAPACK libraries:
 \lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
 \begin{lstlisting}
-R CMD INSTALL  --configure-args='--with-blas=refblas64'
+R CMD INSTALL  --configure-args='--with-blas=refblas64' bigalgebra
 \end{lstlisting}
 
 \subsection{Installation with Intel MKL}\label{mkl}
