git-svn-id: svn://svn.r-forge.r-project.org/svnroot/bigmemory@369 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/bigmemory/NEWS
+++ b/pkg/bigmemory/NEWS
@@ -9,6 +9,17 @@
 # Mike Kane <michael.kane@yale.edu>
 #
 
+2011-06-29	Jay and Mike <bigmemoryauthors@bigmemory.org>
+
+* Modified deepcopy() with C code (thanks to Zarrar for this)
+* Added -fpermissive to possibly address a compilation issue
+  in Linux
+* Added -lm to address a linking problem with math.h
+* Fixed a problem with reading all 0's in a column in
+  read.big.matrix()
+* We note that there may be an inconsistency with read.big.matrix()
+  and write.big.matrix() that needs to be addressed.
+
 2010-10-30      Jay     <bigmemoryauthors@bigmemory.org>
 
 * Modified configure to handle a Solaris problem.
