--- a/pkg/bigalgebra/inst/doc/bigalgebra.Rnw
+++ b/pkg/bigalgebra/inst/doc/bigalgebra.Rnw
@@ -1,4 +1,4 @@
-% \VignetteIndexEnt{bigalgebra Manual}
+% \VignetteIndexEntry{bigalgebra Manual}
 % \VignetteDepends{bigalgebra}
 % \VignettePackage{bigalgebra}
 \documentclass[12pt]{article}
@@ -68,27 +68,35 @@
 
 \section{Introduction}
 
-The \verb+bigalgebra+ package provides basic linear algebra operations for
-``Big Matrices'' defined by the \verb+bigmemory+ package. The \verb+bigalgebra+
-package presently only supports double-precision big matrices.  The package
-includes matrix and vector arithmetic operations and a few matrix
-factorizations.  Infix arithmetic operators are overloaded to use
-\verb+bigalgebra+ functions, keeping the syntax familiar and simple.
+The \verb+bigalgebra+ package provides arithmetic functions for
+double-precision valued ``Big Matrices'' defined by the \verb+bigmemory+
+package.  Infix arithmetic operators are overloaded to use \verb+bigalgebra+
+functions, resulting in familiar syntax. Operations with mixed
+\verb+big.matrix+ and standard R numeric arguments are supported.
 
-The package can optionally support operations on matrices with indices of up to
-about $2^{51}$ in each dimension.  Note that the usual R limit constrains
-objects to less than $2^{31}$ total entries in an entire object. The package
-also supports computations on arrays that are larger than available RAM using
-\verb+bigmemory+'s file-backed big matrix objects.
+The package may be installed to use the native R basic linear algebra
+subroutine (BLAS) library (the default case), or to use a reference
+BLAS library configured with large index support.
+
+When configured with large index support, the package supports operations on
+matrices with indices of up to about $2^{52}$ in each dimension.  Note that the
+usual R limit constrains objects to less than $2^{31}$ total entries in an
+entire object. The package also supports computations on arrays that are larger
+than available RAM using \verb+bigmemory+'s file-backed big matrix objects.
 
 \section{Installation}
 
-The package uses the native R linear algebra libraries (BLAS, LAPACK) by
+The package uses the native R linear algebra libraries (BLAS) by
 default to simplify installation. Operations are limited to vectors of at most
 $2^{31}-1$ elements and matrices of at most $2^{31}-1$ rows and $2^{31}-1$
 columns. (Note the difference with standard R matrices, which are limited to
 at most $2^{31}-1$ total elements.)
-
+The following code block illustrates
+standard command-line installation of the source package:
+\lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
+\begin{lstlisting}
+R CMD INSTALL bigalgebra_0.8.1.tar.gz
+\end{lstlisting}
 
 
 \subsection{Installation with Reference BLAS (with large index support)}\label{large}
@@ -96,64 +104,63 @@ at most $2^{31}-1$ total elements.)
 The default installation ships with a subset of the refererence BLAS and LAPACK
 libraries available from Netlib\footnote{ \htmladdnormallink{http://netlib.org}
 {http://netlib.org}} compiled at installation time with support for large
-indices.  But, the libraries are not tuned for performance--use
-high-performance libraries instead when possible.  Enabling large indices
-supports operations on vectors and matrices with up to $2^{52}-1$ elements in
-any dimension.
+indices.  But, the libraries are not tuned for performance.  Enabling large
+indices supports operations on vectors and matrices with up to $2^{52}-1$
+elements in any dimension.
 
-Enabling the Netlib BLAS with large integer support requires downloading
-the {\tt bigalgebra} source package and editing the {\tt Makevars}
-or {\tt Makevars.win} file. To enable support, edit the file and uncomment
-the lines (indicated by comments in the file):
+Enabling the Netlib BLAS with large integer support requires installation using
+the {\tt bigalgebra} source package from the command line, and is enabled by
+setting the environment variable \verb+REFBLAS=1+, for example:
 \lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
 \begin{lstlisting}
-PKG_FFLAGS=-fdefault-integer-8 -fno-underscoring
-PKG_FCLAGS=-fdefault-integer-8 -fno-underscoring
-PKG_LIBS=-lgfortran
-PKG_CPPFLAGS+=-DREFBLAS
-OBJECTS=$(subst .f,.o,$(wildcard refblas64/*.f))
+REFBLAS=1 R CMD INSTALL bigalgebra_0.8.1.tar.gz
 \end{lstlisting}
-The package omits standard underscoring on Fortran BLAS functions
-to help differentiate them from those provided by R's BLAS library.
-
-\subsubsection{Note!}
-Some high-performance linear algebra libraries supply {\it both}
-underscored and non-underscored Fortran function names for the
-BLAS functions. In such cases, a different name decoration scheme
-must be used to avoid conflict with R BLAS function symbol names.
-
-\subsection{Installation with alternate linear algebra libraries}
-
-Under construction...
-
+The package decorates BLAS function names in a way that will not interfere
+with native R BLAS symbols.
+Reference BLAS performance (speed) will generally be worse than the native R
+BLAS performance.  Only use the reference BLAS if you really need to work with
+vectors longer than $2^{31}-1$.
 
 \section{Using the package}
-The {\tt bigalgebra} package is simple to use. Load the package
-with:
+The {\tt bigalgebra} package is simple to use. Load the package with:
 \lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
 \begin{lstlisting}
-library("bigalgebra")
+> library("bigalgebra")
 \end{lstlisting}
+Once loaded, arithmetic functions are defined for \verb+big.matrix+-class
+objects.  Note that element-wise operations (like Hadamard products), and
+operations that recycle values are not supported.
 
-\subsection{List of available functions}
-We've been recently updating the package and have temporarily
-removed most functions. The package presently only supports
-matrix multiplication. Other arithmetic and matrix decomposition
-methods will be added back in by end of December, 2012.
+The following listing shows a few simple examples.
+\lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
+\begin{lstlisting}
+> library("bigalgebra")
+> set.seed(1)
+> A <- matrix(rnorm(4), nrow=2)
+> a <- as.big.matrix(A)          # A tiny, square, big.matrix
+> b <- a %*% a                   # returns an "anonymous" big.matrix
+> c <- a + a                     # another big.matrix result
+> d <- 2 * a                     # Mixing scalars and big.matrix arguments
+> d <- a * 2                     # scalar multiplication commutes
+> f <- a %*% A                   # Mixing big.marix and matrix arguments
+> g <- a %*% a - b               # Chain of operations
+\end{lstlisting}
 
 
 \subsection{Returned values}
 
-The package returns a new {\tt big.matrix} object, or set of {\tt big.matrix}
-objects for operations involving only {\tt big.matrix} objects.
-Operations that involve a mixture of standard R matrices or vectors and
-a {\tt big.matrix} may return either an R matrix or a {\tt big.matrix}
+The package returns a new {\tt big.matrix} object for operations involving only
+{\tt big.matrix} objects.
+
+Operations that involve a mixture of standard R matrices, vectors, or scalars,
+and a {\tt big.matrix} may return either an R matrix or a {\tt big.matrix}
 depending on the setting of the package option
-\verb+bigalgebra.mixed_arithmetic_returns_R_matrix+. The default value
-of this option is \verb+TRUE+, which means that operations on mixed
-matrices will allocate and return an R matrix or vector. Set the option
-to \verb+FALSE+ to return results of operations on mixed matrices as
-new \verb+big.matrix+ objects.
+\verb+bigalgebra.mixed_arithmetic_returns_R_matrix+. The default value of this
+option is \verb+TRUE+, which means that operations on mixed-class arguments
+will allocate and return a standard R matrix or vector. Set the option to
+\verb+FALSE+ to return results of operations on mixed matrices as new
+\verb+big.matrix+ objects.
+
 \lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
 \begin{lstlisting}
 # To obtain results as R matrices, set (the default):
@@ -175,13 +182,35 @@ An object of class "big.matrix"
 Slot "address":
 <pointer: 0x1d101b0>
 
-
 \end{lstlisting}
 
+
+\subsection{Garbage collection of anonymously-defined big matrices}
+
+Some operations performed by the \verb+bigalgebra+ package return
+``anonymously'' allocated \verb+big.matrix+ objects. Such objects are backed by
+a temporary file defined by the package options
+\\\noindent
+\verb+options("bigalgebra.tempdir")+ and
+\\\noindent
+\verb+options("bigalgebra.temp_pattern")+.  These big matrices are
+ephemeral--their backing and descriptor files are unlinked when the
+corresponding R object is de-allocated by the garbage collector.
+
+You may explicitly observe creation and removal of temporary backing
+files by setting the option:
+\lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
+\begin{lstlisting}
+options(bigalgebra.DEBUG=TRUE)
+\end{lstlisting}
+
+
+
 \subsection{A practical example}
-We illustrate using the {\tt bigalgebra} package together with the
-{\tt irlba} package to compute a few singular values and associated
-singular vectors of a large, dense matrix.
+
+We illustrate using the {\tt bigalgebra} package together with the {\tt irlba}
+package to compute a few singular values and associated singular vectors of a
+large, dense matrix.
 
 The {\tt irlba} package\footnote{
 \htmladdnormallink{http://cran.r-project.org/web/packages/irlba/index.html}}
@@ -189,10 +218,10 @@ The {\tt irlba} package\footnote{
 implementation of a state of the art method for efficiently computing a few
 singular values and singular vectors of a matrix.
 
-The {\tt irlba} function allows users to supply a function for
-computing the product of a matrix or its transpose with a vector.
-We take advantage of this function to avoid explicitly forming the
-transponse of the (potentially large) {\tt big.matrix}.
+The {\tt irlba} function allows users to supply a function for computing the
+product of a matrix or its transpose with a vector.  We take advantage of this
+function to avoid explicitly forming the transponse of the (potentially large)
+{\tt big.matrix}.
 
 \lstset{columns=flexible, basicstyle={\ttfamily\slshape}}
 \begin{lstlisting}
@@ -228,14 +257,12 @@ transponse of the (potentially large) {\tt big.matrix}.
 [2,] 5.154081 4.816501
 [3,] 5.154081 4.816501
 \end{lstlisting}
-Note that the singular vectors are unique up to sign (that is, they
-may have different signs between the answers). Also note that we
-could use the same matmul function with both {\tt big.matrix} and
-standard matrix arguments.
+Note that the singular vectors are unique up to sign (that is, they may have
+different signs between the answers). Also note that we could use the same
+matmul function with both {\tt big.matrix} and standard matrix arguments.
 
-This simple example can be used to efficiently compute a few singular
-values and vectors of very large {\tt big.matrix} objects.
-
+This simple example can be used to efficiently compute a few singular values
+and vectors of very large {\tt big.matrix} objects.
 
 \subsection{Large-index support}
 
@@ -252,11 +279,15 @@ space.
 > y <- big.matrix(nrow=2^31, ncol=1, type="double", backingfile="y")
 > x[5,1] <- 5
 > y[5,1] <- 5
-> daxpy(Y=y, X=x)
-> print(y[1:10,])
+> z <- x + y
+> print(z[1:10,])
  [1]  0  0  0  0 10  0  0  0  0  0
 \end{lstlisting}
 
-
+We remark that file-backed big matrices are block-sparse--that is they allocate
+space for their values in blocks (usually equal to the operating system kernel
+page size). Only blocks containing values are allocated. Thus, the \verb+x+ and
+\verb+y+ matrices in the above example each only consume one page of storage
+space on disk.
 
 \end{document}
